--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,16 @@
       <artifactId>aspectjweaver</artifactId>
       <version>1.9.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.0.16.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
 
   </dependencies>
 
