添加消息国际化，参数校验

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,15 +1,15 @@
-### 设置 ###
+### \u8BBE\u7F6E ###
 log4j.rootLogger=info,console
 
 
-# 输出信息到控制抬
+# \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
 
 
-# 输出到文件 F://logs/log.log
+# \u8F93\u51FA\u5230\u6587\u4EF6 F://logs/log.log
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.File=F://logs/log.log
 log4j.appender.file.Append=true
@@ -18,7 +18,7 @@ log4j.appender.file.Threshold=DEBUG
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
 
-# 输出到文件 F://logs/log.html
+# \u8F93\u51FA\u5230\u6587\u4EF6 F://logs/log.html
 log4j.appender.html=org.apache.log4j.FileAppender
 log4j.appender.html.File=F://logs/log.html
 log4j.appender.html.Append=true
@@ -27,19 +27,19 @@ log4j.appender.html.Threshold=DEBUG
 log4j.appender.html.layout=org.apache.log4j.HTMLLayout
 
 
-# 文件分块，文件最大为 1MB，最多有5个文件，循环覆盖旧文件
+# \u6587\u4EF6\u5206\u5757\uFF0C\u6587\u4EF6\u6700\u5927\u4E3A 1MB\uFF0C\u6700\u591A\u67095\u4E2A\u6587\u4EF6\uFF0C\u5FAA\u73AF\u8986\u76D6\u65E7\u6587\u4EF6
 log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
 log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.rollingFile.layout.conversionPattern=[%-10p]%r %c%t%d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
 log4j.appender.rollingFile.file=F://logs/log.log
 log4j.appender.rollingFile.encoding=UTF-8
-#指定日志文件内容大小
+#\u6307\u5B9A\u65E5\u5FD7\u6587\u4EF6\u5185\u5BB9\u5927\u5C0F
 log4j.appender.rollingFile.maxFileSize=1MB
-#指定日志文件的数量
+#\u6307\u5B9A\u65E5\u5FD7\u6587\u4EF6\u7684\u6570\u91CF
 log4j.appender.rollingFile.maxBackupIndex=5
 
 
-# 文件按时间来，设置datePattern，按照时间精度来分文件，'.'yyyy-MM-dd 级按照天来分
+# \u6587\u4EF6\u6309\u65F6\u95F4\u6765\uFF0C\u8BBE\u7F6EdatePattern\uFF0C\u6309\u7167\u65F6\u95F4\u7CBE\u5EA6\u6765\u5206\u6587\u4EF6\uFF0C'.'yyyy-MM-dd \u7EA7\u6309\u7167\u5929\u6765\u5206
 log4j.appender.dailyRollingFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dailyRollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.dailyRollingFile.layout.conversionPattern=[%-10p]%r %c%t%d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
@@ -49,7 +49,7 @@ log4j.appender.dailyRollingFile.datePattern='.'yyyy-MM-dd
 #log4j.appender.dailyRollingFile.datePattern='.'yyyy-MM-dd HH-mm-ss
 
 
-# 输出到数据库表
+# \u8F93\u51FA\u5230\u6570\u636E\u5E93\u8868
 log4j.appender.logDB=org.apache.log4j.jdbc.JDBCAppender
 log4j.appender.logDB.layout=org.apache.log4j.PatternLayout
 log4j.appender.logDB.Driver=com.mysql.jdbc.Driver
