课程表功能基本完成，还待优化（打印课程表）

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ target/
 src/main/webapp/page/*.html
 src/main/webapp/test/
 src/main/java/cn/qkmango/tms/test/
-src/main/webapp/lib/layui-v2.6.3/layui - 副本.js
+src/main/webapp/lib/layui-v2.6.3/layui_update.js
 src/test/
