优化与修改

--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -1,4 +1,5 @@
 jdbc.url=jdbc:mysql://localhost:3306/tms?useUnicode=true&characterEncoding=utf8
+jdbc.url.dev=jdbc:mysql://localhost:3306/tsm?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=admin
 druid.maxActive=5
