优化与修改

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ src/main/java/cn/qkmango/tms/test/
 src/main/webapp/lib/layui-v2.6.3/layui_update.js
 src/main/webapp/**/*.bak.*
 src/test/
+/src/main/webapp/page/student/common/data.json
+/src/main/webapp/api/test.json
