--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-catalina</artifactId>
+      <version>9.0.50</version>
+    </dependency>
 
   </dependencies>
 
